# smart-glasses

./: .gitignore  DOCS_INDEX.md  INSTALL.md  README.md  pyproject.toml  run_webcam.py  run_webcam_full.py  setup.sh  test_pipeline.py  test_voice.py  test_voice_input.py
apps/: __init__.py  generate_sample.py  run_replay.py
contracts/: __init__.py  schemas.py
core_platform/: __init__.py  clock.py  control_state.py  frame_bus.py  result_bus.py
docs/: ARCHITECTURE_REFACTORING.md  CLEANUP_PLAN.md  COMPONENT_STATUS.md  DIAGRAM_LEGEND.md  MAP_BASED_NAVIGATION.md  ML_INTEGRATION_GUIDE.md  QUICKREF.md  README.md  REFACTOR_SUMMARY.md  RFID_INTEGRATION.md  SCENE_DESCRIPTION_EXPLAINED.md  SYSTEM_ARCHITECTURE.md  USAGE_GUIDE.md  VOICE_GUIDE.md  VOICE_OUTPUT_GUIDE.md  WEBCAM_GUIDE.md  YOLO_CLASSES.md  message_contracts.md
modules/: __init__.py  base.py
modules/fusion/: __init__.py  module.py  policy.py
modules/navigation/: __init__.py  guidance.py  module.py  spatial.py
modules/object_detection/: __init__.py  module.py  real_detectors.py  stub_detector.py  yolo_world_detector.py
modules/scene_description/: __init__.py  module.py
modules/tracker/: __init__.py  matching.py  module.py  tracker.py
modules/voice_input/: __init__.py  module.py
modules/voice_output/: __init__.py  module.py
sources/: __init__.py  camera_source.py  sample_generator.py  video_source.py
tests/: __init__.py  conftest.py  test_buses.py  test_end_to_end_replay.py  test_navigation.py  test_tracker.py
ui/: __init__.py  server.py
ui/static/: app.js  index.html  styles.css
